nginx-go/istio/robot-ab-testing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: go
spec:
    hosts:
    - go
    http:
    - match:
      - headers:
          user-agent:
            regex: ".*Firefox.*"
      route:
      - destination:
          host: go
          subset: v2
    - route:
      - destination:
          host: go
          subset: v3
