nginx-go/istio/robot-istio-versions.yaml
#_______________________________________________GO APPS__________________________________________
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: go-v1
  labels:
    app: go
    version: v1
spec:
  selector:
    matchLabels:
      app: go
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: go
        version: v1
    spec:
      containers:
      - name: go      
        image: nour963/go-v1   
        ports:
          - containerPort: 8080  
        
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: go-v2
  labels:
    app: go
    version: v2
spec:
  selector:
    matchLabels:
      app: go
      version: v2
  replicas: 2
  template:
    metadata:
      labels:
        app: go
        version: v2
    spec:
      containers:
      - name: go      
        image: nour963/go-v2   
        ports:
          - containerPort: 8080  
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: go-v3
  labels:
    app: go
    version: v3
spec:
  selector:
    matchLabels:
      app: go
      version: v3
  replicas: 2
  template:
    metadata:
      labels:
        app: go
        version: v3
    spec:
      containers:
      - name: go      
        image: nour963/go-v3  
        ports:
          - containerPort: 8080         
---
apiVersion: v1
kind: Service
metadata:
  name: go
  labels:
    app: go
    service: go 
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: go
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    version: v1
spec:
  selector:
    matchLabels:
      app: nginx
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx       
        image: nour963/nginx-go
        ports:
          - containerPort: 80 
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf  
---

#_________________________________________________GATEWAY__________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#_____________________________________________VIRTUAL SERVICES__________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: nginx
spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - route:
      - destination:
          host: nginx
          subset: v1
          port:
            number: 80
---
#____virtual service for canary deployment____

#_____________________________________________DESTINATION RULES________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go
spec:
  host: go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
