nginx-go/istio/robot-istio.yaml
#______________________________________________GO APP___________________________________________
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: go
  labels:
    app: go
    version: v1
spec:
  selector:
    matchLabels:
      app: go
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: go
        version: v1
    spec:
      containers:
      - name: go      
        image: nour963/hello-go   
        ports:
          - containerPort: 8080 
            name: http  
        
---
apiVersion: v1
kind: Service
metadata:
  name: go
  labels:
    app: go
    service: go 
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    name: http
  selector:
    app: go
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
    name: http
  selector:
    app: nginx
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    version: v1
spec:
  selector:
    matchLabels:
      app: nginx
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx       
        image: nour963/nginx-go
        ports:
          - containerPort: 80 
            name: http 
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf  
---

#________________________________________________GATEWAY___________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway           # use istio prebuilt INgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#_____________________________________________VIRTUAL SERVICE________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: nginx
spec:
    hosts:
    - "*"
    gateways:
    - nginx-gateway
    http:
    - route:
      - destination:
          host: nginx
          subset: v1
          port:
            number: 80
---
#_____________________________________________DESTINATION RULE________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go
spec:
  host: go
  subsets:
  - name: v1
    labels:
      version: v1
